/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'maven-publish'
}
group = 'volkov.ivan'
version = '1.0.0'
description = 'Linear Chess Backend'
java.sourceCompatibility = JavaVersion.VERSION_1_8

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
    maven {
        url = uri('https://jitpack.io')
    }
}

dependencies {
    testImplementation 'junit:junit:4.12'
    implementation 'com.github.bhlangonijr:chesslib:1.3.3'
    implementation 'com.sparkjava:spark-core:2.9.4'
}
//
// java {
//     withJavadocJar()
// }

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

jar {
  manifest {
     attributes "Main-Class": "rest.chess.GameBackend"
     attributes "Class-Path": configurations.compile.collect { it.absolutePath }.join(" ")
  }
}